--- a/index.html
+++ b/index.html
@@ -6,41 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css?v=1" />
     <!-- Font Awesome for Social Media Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Home-Page</title>
   </head>
 
   <body>
-    <!-- nav bar started -->
-    <nav class="navbar navbar-expand-lg ">
-      <div class="  container secpad">
-        <a class="navbar-brand" href="index.html"><img src="assets/images/logo.svg" alt="logo" /></a>
-        <div id="navbarSupportedContent">
-          <ul class="me-2 navbar-nav me-auto ">
-            <li>
-              <ul class="d-flex">
-                <li class="nav-item dropdown d-flex mx-3">
-                  <a class="drop" href="services.html"> Services </a>
-                </li>
-                <li>
-                  <a class="px" id="open-menu">
-                    <p>14</p>
-                  </a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
     <!-- hero section  -->
     <section id="hero" class="hero">
+      <!-- nav bar started -->
+      <nav class="navbar navbar-expand-lg home-nav bg-transparent">
+        <div class="  container secpad">
+          <a class="navbar-brand" href="index.html"><img src="assets/images/logo.svg" alt="logo" /></a>
+          <div id="navbarSupportedContent">
+            <ul class="me-2 navbar-nav me-auto ">
+              <li>
+                <ul class="d-flex">
+                  <li class="nav-item dropdown d-flex mx-3">
+                    <a class="drop" href="services.html"> Services </a>
+                  </li>
+                  <li>
+                    <a class="px" id="open-menu">
+                      <p>14</p>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       <div class="container position-relative hero-contain">
         <img src="./assets/images/logo.svg" class="bg-logo">
         <div class="hero-text position-relative">
-          <h1 class="position-relative hero-heading">The Branding <span
+          <h1 class="position-relative hero-heading"><span class="hero-gradient">The Branding</span> <span
               class="position-absolute text-position pecita">Artist.</span></h1>
           <p> I am on a mission of 1.2 million. Through my design skills, I am on a mission to transform our beautiful
             paradise island into an even better place to live for the 1.2 million people living in it. Is it even
@@ -74,9 +74,10 @@
                   to achieved their design goals and help them to have a professional look in their industry so they can
                   thrive.</p>
                 <div class="row py-3">
-                  <a href="#" class="col-4 about-links">Hire me</a>
-                  <a href="#" class="col-4 about-links">Resume</a>
-                  <a href="#" class="col-4 about-links">Projects</a>
+                  <a href="#footer" class="col-4 about-links">Hire me</a>
+                  <a href="https://drive.google.com/file/d/1t0vagviTZu2H95qL4t7cc28-uCQblj7B/view" target="_blank"
+                    class="col-4 about-links">Resume</a>
+                  <a href="#" onclick="openMenu(event)" class="col-4 about-links">Projects</a>
                 </div>
                 <div class="row ">
                   <div class="col-6 d-flex text-align">
@@ -183,6 +184,9 @@
             <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
           </div>
           <!-- Slides -->
           <div class="carousel-inner">
@@ -203,10 +207,34 @@
             <div class="carousel-item">
               <div class="d-flex flex-column align-items-center justify-content-center">
                 <div class="carousel-content col-lg-5 col-md-6 col-sm-8 ">
-                  <p class="carousel-para">"Through his keen eye for detail and insightful questions, he was able to grasp the core values and objectives of my idea, which significantly enriched the creative process. His dedication to understanding my business allowed for the creation of designs that not only met but exceeded my expectations."
-                  </p>
+                  <p class="carousel-para">"Through his keen eye for detail and insightful questions, he was able to
+                    grasp the core values and objectives of my idea, which significantly enriched the creative process.
+                    His dedication to understanding my business allowed for the creation of designs that not only met
+                    but exceeded my expectations." </p>
                   <h2 class="tag-head">Soomaya Rahim Baccus</h2>
                   <p class="tagline">Product Manager</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="d-flex flex-column align-items-center justify-content-center">
+                <div class="carousel-content col-lg-5 col-md-6 col-sm-8 ">
+                  <p class="carousel-para">"I have been working with Suhayl for a quite long time. His passion for
+                    Graphic design makes him extremely commited to his works. Even in sales management he is looking up
+                    for new methods to perform better." </p>
+                  <h2 class="tag-head">Swaley Tarsoo</h2>
+                  <p class="tagline">CEO at Giffy Co Ltd</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="d-flex flex-column align-items-center justify-content-center">
+                <div class="carousel-content col-lg-5 col-md-6 col-sm-8 ">
+                  <p class="carousel-para">"I was very impressed by the quality of the logo proposed by Suhayl at the
+                    time we were looking to uplift our logo. The uplifting process was successful and easily adopted by
+                    all stakeholder of the business." </p>
+                  <h2 class="tag-head">Ashfaaq Polin</h2>
+                  <p class="tagline">Director at La Vallée Des Couleurs</p>
                 </div>
               </div>
             </div>
@@ -221,110 +249,119 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <div class="row brands-logo">
-          <div class="brands"><img src="./assets/images/logos1.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos2.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos3.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos4.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos5.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos6.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos7.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos8.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos9.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos10.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos11.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos12.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos13.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos14.svg" alt="brands"></div>
-          <div class="brands"><img src="./assets/images/logos15.svg" alt="brands"></div>
+        <div class="py-5">
+          <div class="row brands-logo">
+            <div class="brands"><img src="./assets/images/logos1.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos2.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos3.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos4.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos5.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos6.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos7.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos8.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos9.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos10.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos11.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos12.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos13.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos14.svg" alt="brands"></div>
+            <div class="brands"><img src="./assets/images/logos15.svg" alt="brands"></div>
+          </div>
         </div>
       </div>
     </section>
     <!-- Footer  -->
-    <footer class="footer text-center">
+    <footer class="footer text-center" id="footer">
       <div class="container footer">
         <div class="touch my-auto">
-          <a href="services.html">
-            <h2 class="fw-bold"><img src="./assets/images/footer.svg" class="mx-4" alt="Abc"><span>Get in touch</span>
+          <a href="mailto:suhayltarsoo@gmail.com">
+            <h2 class="fw-bold">
+              <svg width="96" height="110" viewBox="0 0 96 110" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M41 0L96 55L41 110V89L68 62H0V47H67L41 21V0Z"
+                  fill="#3F348F" />
+              </svg>
+              <span>Get in touch</span>
             </h2>
           </a>
         </div>
         <div class="social-media">
-          <a href="#">suhayltarsoo@gmail.com</a>
-          <a href="#">Instagram</a>
-          <a href="#">Facebook</a>
-          <a href="#">LinkedIn</a>
-          <a href="#">Whatsapp</a>
+          <a href="mailto:suhayltarsoo@gmail.com">suhayltarsoo@gmail.com</a>
+          <a href="https://www.instagram.com/shyl_trs/" target="_blank">Instagram</a>
+          <a href="https://www.facebook.com/Shylfadp/" target="_blank">Facebook</a>
+          <a href="https://www.linkedin.com/in/suhayl-tarsoo-a24158269/" target="_blank">LinkedIn</a>
+          <a href="https://wa.link/f9imx9" target="_blank">Whatsapp</a>
           <a href="#">suhayltarsoo©2024</a>
-        </div>
+      </div>
       </div>
     </footer>
     <!-- dropdown -->
-    <ul class="dropdown-menu" id="right-menu">
-      <span class="dropdown-close-icon close-dropdown m-4" id="close-menu">&times;</span>
-      <!-- Close icon -->
-      <li><a class="dropdown-item mt-5 " href="abovehorizon.html">
-          <p class="item-up">Above Horizon</p>
-          <p class="item-dn">Brand Identity</p>
-        </a></li>
-      <li><a class="dropdown-item " href="lazeez.html">
-          <p class="item-up">Lazeez</p>
-          <p class="item-dn">Brand Identity</p>
-        </a></li>
-      <li><a class="dropdown-item " href="salaamCare.html">
-          <p class="item-up">SalaamCare</p>
-          <p class="item-dn">Brand Identity</p>
-        </a></li>
-      <li><a class="dropdown-item " href="lavalléedescouleurs.html">
-          <p class="item-up">La Vallée Des Couleurs</p>
-          <p class="item-dn">Brand Identity</p>
-        </a></li>
-      <li><a class="dropdown-item " href="valleo.html">
-          <p class="item-up">Valléo</p>
-          <p class="item-dn">Logo Design - Brand Identity</p>
-        </a></li>
-      <li><a class="dropdown-item " href="evaderspareparts.html">
-          <p class="item-up">Evader Spare Parts</p>
-          <p class="item-dn">Logo Design - Brand Identity</p>
-        </a></li>
-      <li><a class="dropdown-item " href="skidooboardgame.html">
-          <p class="item-up">Skidoo Boardgame</p>
-          <p class="item-dn">Logo Design - Packaging Design - Illustration</p>
-        </a></li>
-      <li><a class="dropdown-item " href="xiaomis1active.html">
-          <p class="item-up">Xiaomi S1 Active</p>
-          <p class="item-dn">Packaging Design - Personal</p>
-        </a></li>
-      <li><a class="dropdown-item " href="lvdcmapproject.html">
-          <p class="item-up">LVDC Map Project</p>
-          <p class="item-dn">Visual Communication - Print Design</p>
-        </a></li>
-      <li><a class="dropdown-item " href="eventinvitation.html">
-          <p class="item-up">Event Invitation</p>
-          <p class="item-dn">Visual Communication</p>
-        </a></li>
-      <li><a class="dropdown-item " href="masjidannabvi.html">
-          <p class="item-up">Masjid-An-Nabawi</p>
-          <p class="item-dn">Visual Communication</p>
-        </a></li>
-      <li><a class="dropdown-item " href="taekwondo.html">
-          <p class="item-up">Taekwondo</p>
-          <p class="item-dn">Photography</p>
-        </a></li>
-      <li><a class="dropdown-item " href="23colouredearth.html">
-          <p class="item-up">23 Coloured Earth</p>
-          <p class="item-dn">Aerial Photography</p>
-        </a></li>
-      <li><a class="dropdown-item " href="photodocu.html">
-          <p class="item-up">Photo Docu /</p>
-          <p class="item-dn">Photography Personal</p>
-        </a></li>
-    </ul>
+    <div class="side-nav">
+      <ul class="dropdown-menu" id="right-menu">
+        <span class="dropdown-close-icon close-dropdown m-4" id="close-menu">&times;</span>
+        <!-- Close icon -->
+        <li><a class="dropdown-item mt-5 " href="abovehorizon.html">
+            <p class="item-up">Above Horizon</p>
+            <p class="item-dn">Brand Identity</p>
+          </a></li>
+        <li><a class="dropdown-item " href="lazeez.html">
+            <p class="item-up">Lazeez</p>
+            <p class="item-dn">Brand Identity</p>
+          </a></li>
+        <li><a class="dropdown-item " href="salaamCare.html">
+            <p class="item-up">SalaamCare</p>
+            <p class="item-dn">Brand Identity</p>
+          </a></li>
+        <li><a class="dropdown-item " href="lavalléedescouleurs.html">
+            <p class="item-up">La Vallée Des Couleurs</p>
+            <p class="item-dn">Brand Identity</p>
+          </a></li>
+        <li><a class="dropdown-item " href="valleo.html">
+            <p class="item-up">Valléo</p>
+            <p class="item-dn">Logo Design - Brand Identity</p>
+          </a></li>
+        <li><a class="dropdown-item " href="evaderspareparts.html">
+            <p class="item-up">Evader Spare Parts</p>
+            <p class="item-dn">Logo Design - Brand Identity</p>
+          </a></li>
+        <li><a class="dropdown-item " href="skidooboardgame.html">
+            <p class="item-up">Skidoo Boardgame</p>
+            <p class="item-dn">Logo Design - Packaging Design - Illustration</p>
+          </a></li>
+        <li><a class="dropdown-item " href="xiaomis1active.html">
+            <p class="item-up">Xiaomi S1 Active</p>
+            <p class="item-dn">Packaging Design - Personal</p>
+          </a></li>
+        <li><a class="dropdown-item " href="lvdcmapproject.html">
+            <p class="item-up">LVDC Map Project</p>
+            <p class="item-dn">Visual Communication - Print Design</p>
+          </a></li>
+        <li><a class="dropdown-item " href="eventinvitation.html">
+            <p class="item-up">Event Invitation</p>
+            <p class="item-dn">Visual Communication</p>
+          </a></li>
+        <li><a class="dropdown-item " href="masjidannabvi.html">
+            <p class="item-up">Masjid-An-Nabawi</p>
+            <p class="item-dn">Visual Communication</p>
+          </a></li>
+        <li><a class="dropdown-item " href="taekwondo.html">
+            <p class="item-up">Taekwondo</p>
+            <p class="item-dn">Photography</p>
+          </a></li>
+        <li><a class="dropdown-item " href="23colouredearth.html">
+            <p class="item-up">23 Coloured Earth</p>
+            <p class="item-dn">Aerial Photography</p>
+          </a></li>
+        <li><a class="dropdown-item " href="photodocu.html">
+            <p class="item-up">Photo Docu /</p>
+            <p class="item-dn">Photography Personal</p>
+          </a></li>
+      </ul>
+    </div>
     <script src="./assets/js/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js?v=1"></script>
   </body>
 
 </html>
