--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous" />
-        <link rel="stylesheet" href="assets/css/style.css" />
+        <link rel="stylesheet" href="assets/css/style.css?v=1" />
         <!-- Font Awesome for Social Media Icons -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         <title>Services</title>
@@ -169,8 +169,8 @@
                                 <div class="card-top ">
                                     <h2 class="card-heading ">Signature Brand Mastery</h2>
                                     <div class="px-4">
-                                        <p class="card-para suit cp-3">This is the ultimate package for those who want to
-                                            take their business to the next level. Here, we push the boundaries to
+                                        <p class="card-para suit cp-3">This is the ultimate package for those who want
+                                            to take their business to the next level. Here, we push the boundaries to
                                             create a stunning and much more detailed visual Identity that not only
                                             includes a logo design and a comprehensive visual identity but also applying
                                             it to your business. <br><br><br> Whether you need printed designs,
@@ -289,90 +289,98 @@
             </div>
         </section>
         <!-- Footer  -->
-        <footer class="footer text-center">
+        <footer class="footer text-center" id="footer">
             <div class="container footer">
                 <div class="touch my-auto">
-                    <a href="services.html">
-                        <h2 class="fw-bold"><img src="./assets/images/footer.svg" class="mx-4" alt="Abc"><span>Get in
-                                touch</span></h2>
+                    <a href="mailto:suhayltarsoo@gmail.com">
+                        <h2 class="fw-bold">
+                            <svg width="96" height="110" viewBox="0 0 96 110" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M41 0L96 55L41 110V89L68 62H0V47H67L41 21V0Z" fill="#3F348F" />
+                            </svg>
+                            <span>Get in touch</span>
+                        </h2>
                     </a>
                 </div>
                 <div class="social-media">
-                    <a href="#">suhayltarsoo@gmail.com</a>
-                    <a href="#">Instagram</a>
-                    <a href="#">Facebook</a>
-                    <a href="#">LinkedIn</a>
-                    <a href="#">Whatsapp</a>
+                    <a href="mailto:suhayltarsoo@gmail.com">suhayltarsoo@gmail.com</a>
+                    <a href="https://www.instagram.com/shyl_trs/" target="_blank">Instagram</a>
+                    <a href="https://www.facebook.com/Shylfadp/" target="_blank">Facebook</a>
+                    <a href="https://www.linkedin.com/in/suhayl-tarsoo-a24158269/" target="_blank">LinkedIn</a>
+                    <a href="https://wa.link/f9imx9" target="_blank">Whatsapp</a>
                     <a href="#">suhayltarsoo©2024</a>
                 </div>
             </div>
         </footer>
         <!-- dropdown -->
-        <ul class="dropdown-menu" id="right-menu">
-            <span class="dropdown-close-icon close-dropdown m-4" id="close-menu">&times;</span>
-            <!-- Close icon -->
-            <li><a class="dropdown-item mt-5 " href="abovehorizon.html">
-                    <p class="item-up">Above Horizon</p>
-                    <p class="item-dn">Brand Identity</p>
-                </a></li>
-            <li><a class="dropdown-item " href="lazeez.html">
-                    <p class="item-up">Lazeez</p>
-                    <p class="item-dn">Brand Identity</p>
-                </a></li>
-            <li><a class="dropdown-item " href="salaamCare.html">
-                    <p class="item-up">SalaamCare</p>
-                    <p class="item-dn">Brand Identity</p>
-                </a></li>
-            <li><a class="dropdown-item " href="lavalléedescouleurs.html">
-                    <p class="item-up">La Vallée Des Couleurs</p>
-                    <p class="item-dn">Brand Identity</p>
-                </a></li>
-            <li><a class="dropdown-item " href="valleo.html">
-                    <p class="item-up">Valléo</p>
-                    <p class="item-dn">Logo Design - Brand Identity</p>
-                </a></li>
-            <li><a class="dropdown-item " href="evaderspareparts.html">
-                    <p class="item-up">Evader Spare Parts</p>
-                    <p class="item-dn">Logo Design - Brand Identity</p>
-                </a></li>
-            <li><a class="dropdown-item " href="skidooboardgame.html">
-                    <p class="item-up">Skidoo Boardgame</p>
-                    <p class="item-dn">Logo Design - Packaging Design - Illustration</p>
-                </a></li>
-            <li><a class="dropdown-item " href="xiaomis1active.html">
-                    <p class="item-up">Xiaomi S1 Active</p>
-                    <p class="item-dn">Packaging Design - Personal</p>
-                </a></li>
-            <li><a class="dropdown-item " href="lvdcmapproject.html">
-                    <p class="item-up">LVDC Map Project</p>
-                    <p class="item-dn">Visual Communication - Print Design</p>
-                </a></li>
-            <li><a class="dropdown-item " href="eventinvitation.html">
-                    <p class="item-up">Event Invitation</p>
-                    <p class="item-dn">Visual Communication</p>
-                </a></li>
-            <li><a class="dropdown-item " href="masjidannabvi.html">
-                    <p class="item-up">Masjid-An-Nabawi</p>
-                    <p class="item-dn">Visual Communication</p>
-                </a></li>
-            <li><a class="dropdown-item " href="taekwondo.html">
-                    <p class="item-up">Taekwondo</p>
-                    <p class="item-dn">Photography</p>
-                </a></li>
-            <li><a class="dropdown-item " href="23colouredearth.html">
-                    <p class="item-up">23 Coloured Earth</p>
-                    <p class="item-dn">Aerial Photography</p>
-                </a></li>
-            <li><a class="dropdown-item " href="photodocu.html">
-                    <p class="item-up">Photo Docu /</p>
-                    <p class="item-dn">Photography Personal</p>
-                </a></li>
-        </ul>
+        <div class="side-nav">
+            <ul class="dropdown-menu" id="right-menu">
+                <span class="dropdown-close-icon close-dropdown m-4" id="close-menu">&times;</span>
+                <!-- Close icon -->
+                <li><a class="dropdown-item mt-5 " href="abovehorizon.html">
+                        <p class="item-up">Above Horizon</p>
+                        <p class="item-dn">Brand Identity</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="lazeez.html">
+                        <p class="item-up">Lazeez</p>
+                        <p class="item-dn">Brand Identity</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="salaamCare.html">
+                        <p class="item-up">SalaamCare</p>
+                        <p class="item-dn">Brand Identity</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="lavalléedescouleurs.html">
+                        <p class="item-up">La Vallée Des Couleurs</p>
+                        <p class="item-dn">Brand Identity</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="valleo.html">
+                        <p class="item-up">Valléo</p>
+                        <p class="item-dn">Logo Design - Brand Identity</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="evaderspareparts.html">
+                        <p class="item-up">Evader Spare Parts</p>
+                        <p class="item-dn">Logo Design - Brand Identity</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="skidooboardgame.html">
+                        <p class="item-up">Skidoo Boardgame</p>
+                        <p class="item-dn">Logo Design - Packaging Design - Illustration</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="xiaomis1active.html">
+                        <p class="item-up">Xiaomi S1 Active</p>
+                        <p class="item-dn">Packaging Design - Personal</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="lvdcmapproject.html">
+                        <p class="item-up">LVDC Map Project</p>
+                        <p class="item-dn">Visual Communication - Print Design</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="eventinvitation.html">
+                        <p class="item-up">Event Invitation</p>
+                        <p class="item-dn">Visual Communication</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="masjidannabvi.html">
+                        <p class="item-up">Masjid-An-Nabawi</p>
+                        <p class="item-dn">Visual Communication</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="taekwondo.html">
+                        <p class="item-up">Taekwondo</p>
+                        <p class="item-dn">Photography</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="23colouredearth.html">
+                        <p class="item-up">23 Coloured Earth</p>
+                        <p class="item-dn">Aerial Photography</p>
+                    </a></li>
+                <li><a class="dropdown-item " href="photodocu.html">
+                        <p class="item-up">Photo Docu /</p>
+                        <p class="item-dn">Photography Personal</p>
+                    </a></li>
+            </ul>
+        </div>
         <script src="./assets/js/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
-        <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/script.js?v=1"></script>
     </body>
 
 </html>
